<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_surface"
    android:paddingTop="10dp"
    android:clickable="true"
    android:focusable="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/config_title_input_layout"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/dialog_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/config_title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_title"
            android:inputType="text"
            android:lines="1"
            android:singleLine="true"
            android:textColor="@color/md_onSurface"
            android:textColorHint="@color/md_onSurfaceVariant" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.iboism.gpxrecorder.recording.configurator.Md3DurationWheelPicker
        android:id="@+id/interval_picker"
        android:layout_width="0dp"
        android:layout_height="172dp"
        android:layout_marginStart="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/dialog_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="18dp"
        android:text="@string/interval_minutes"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textColor="@color/md_onSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/config_title_input_layout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/how_often_to_record_track_points"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        android:textColor="@color/md_onSurfaceVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@id/interval_picker" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.7"
        android:text="@string/battery_drain_warning"
        android:textAlignment="textStart"
        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        android:textColor="@color/md_error"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/md3_large_button_height"
        android:layout_marginStart="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/dialog_horizontal_margin"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/on_large_button_surface"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textStyle="bold"
        app:backgroundTint="@color/large_button_surface"
        app:cornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/new_recording"
        android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
        android:textColor="@color/md_onSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
